# MKVAudioSubsDefaulter

./: .gitignore  .pre-commit-config.yaml  LICENSE  MKVAudioSubsDefaulter.py  Makefile  Pipfile  README.md  pyproject.toml  requirements.txt  requirements_dev.txt
.github/ISSUE_TEMPLATE/: bug_report.md
MKVAudioSubsDefaulter/: MKVAudioSubsDefaulter.py  language_codes.txt
tests/: test_MKVAudioSubsDefaulter.py  test_mkv_info.json
