[project]
name = "mkvaudiosubsdefaulter"
version = "1.4.0"
description = "Simple multi-processing python cli to set the default audio and/or subtitles of matroska (.mkv) files WITHOUT having to remux the file"
authors = [
    {name = "Robert-Zacchigna"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "tqdm >= 4.67.1",
    "virtualenv >= 20.34.0",
    "setuptools >= 80.9.0",
    "certifi >= 2025.8.3"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
coverage = "7.6.12"
pre-commit = "4.1.0"
pytest = "8.4.2"
pytest-cov = "6.3.0"
pytest-mock = "3.15.0"
ruff = "0.12.12"
tqdm = "4.67.1"
identify = "2.6.14"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"
