[build-system]
requires = ["setuptools>=82.0.1", "setuptools-scm>=9.2.2", "wheel>=0.47.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mkvaudiosubsdefaulter"
version = "1.4.1"
description = "Simple multi-processing python cli to set the default audio and/or subtitles of matroska (.mkv) files WITHOUT having to remux the file"
authors = [
    {name = "Robert-Zacchigna"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "tqdm >= 4.67.3",
    "certifi >= 2026.4.22"
]

[project.optional-dependencies]
dev = [
    "coverage>=7.13.5",
    "identify>=2.6.19",
    "virtualenv >= 20.39.1",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.0",
    "ruff>=0.15.12",
    "setuptools >= 82.0.1",
]

[tool.ruff.lint]
select = ["E", "F", "I"]  # E=pycodestyle errors, F=pyflakes, I=isort
